--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -74,13 +74,13 @@
                                         <span class="discounted-price">{{item.format_discount_price}}</span>
                                     </p>
                                 </div>
-                                <div class="rating">
-                                    <i class="lnr lnr-star active"></i>
-                                    <i class="lnr lnr-star active"></i>
-                                    <i class="lnr lnr-star active"></i>
-                                    <i class="lnr lnr-star active"></i>
-                                    <i class="lnr lnr-star"></i>
-                                </div>
+                                {#                                <div class="rating">#}
+                                {#                                    <i class="lnr lnr-star active"></i>#}
+                                {#                                    <i class="lnr lnr-star active"></i>#}
+                                {#                                    <i class="lnr lnr-star active"></i>#}
+                                {#                                    <i class="lnr lnr-star active"></i>#}
+                                {#                                    <i class="lnr lnr-star"></i>#}
+                                {#                                </div>#}
                             </div>
 
                             <!--=======  End of grid view product  =======-->
@@ -190,55 +190,11 @@
                         <div class="product-image-slider quickview-product-image-slider flex-row-reverse">
                             <!--Modal Tab Content Start-->
                             <div class="tab-content product-large-image-list quickview-product-large-image-list">
-                                <div class="tab-pane fade show active" id="single-slide-quick-1" role="tabpanel" aria-labelledby="single-slide-tab-quick-1">
-                                    <!--Single Product Image Start-->
-                                    <div class="single-product-img img-full">
-                                        <img src="assets/images/single-product-slider/01.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <!--Single Product Image End-->
-                                </div>
-                                <div class="tab-pane fade" id="single-slide-quick-2" role="tabpanel" aria-labelledby="single-slide-tab-quick-2">
-                                    <!--Single Product Image Start-->
-                                    <div class="single-product-img img-full">
-                                        <img src="assets/images/single-product-slider/02.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <!--Single Product Image End-->
-                                </div>
-                                <div class="tab-pane fade" id="single-slide-quick-3" role="tabpanel" aria-labelledby="single-slide-tab-quick-3">
-                                    <!--Single Product Image Start-->
-                                    <div class="single-product-img img-full">
-                                        <img src="assets/images/single-product-slider/03.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <!--Single Product Image End-->
-                                </div>
-                                <div class="tab-pane fade" id="single-slide-quick-4" role="tabpanel" aria-labelledby="single-slide-tab-quick-4">
-                                    <!--Single Product Image Start-->
-                                    <div class="single-product-img img-full">
-                                        <img src="assets/images/single-product-slider/04.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <!--Single Product Image End-->
-                                </div>
                             </div>
                             <!--Modal Content End-->
                             <!--Modal Tab Menu Start-->
                             <div class="product-small-image-list quickview-product-small-image-list">
                                 <div class="nav small-image-slider quickview-small-image-slider" role="tablist">
-                                    <div class="single-small-image img-full">
-                                        <a data-toggle="tab" id="single-slide-tab-quick-1" href="#single-slide-quick-1"><img src="assets/images/single-product-slider/01.jpg"
-                                                                                                                             class="img-fluid" alt=""></a>
-                                    </div>
-                                    <div class="single-small-image img-full">
-                                        <a data-toggle="tab" id="single-slide-tab-quick-2" href="#single-slide-quick-2"><img src="assets/images/single-product-slider/02.jpg"
-                                                                                                                             class="img-fluid" alt=""></a>
-                                    </div>
-                                    <div class="single-small-image img-full">
-                                        <a data-toggle="tab" id="single-slide-tab-quick-3" href="#single-slide-quick-3"><img src="assets/images/single-product-slider/03.jpg"
-                                                                                                                             class="img-fluid" alt=""></a>
-                                    </div>
-                                    <div class="single-small-image img-full">
-                                        <a data-toggle="tab" id="single-slide-tab-quick-4" href="#single-slide-quick-4"><img src="assets/images/single-product-slider/04.jpg"
-                                                                                                                             alt=""></a>
-                                    </div>
                                 </div>
                             </div>
                             <!--Modal Tab Menu End-->
@@ -248,32 +204,26 @@
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <!-- product quick view description -->
                         <div class="product-feature-details">
-                            <h2 class="product-title mb-15">Kaoreet lobortis sagittis laoreet</h2>
+                            <h2 class="product-title mb-15"></h2>
 
                             <h2 class="product-price mb-15">
-                                <span class="main-price discounted">$12.90</span>
-                                <span class="discounted-price"> $10.00</span>
-                                <span class="discount-percentage">Save 8%</span>
+                                <span class="main-price discounted"></span>
+                                <span class="discounted-price"></span>
+                                {#                                <span class="discount-percentage">Save 8%</span>#}
                             </h2>
-
-                            <p class="product-description mb-20">Lorem ipsum dolor sit amet, consectetur adipisicing
-                                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                minim veniam, quis nostrud exercitation ullamco,Proin lectus ipsum, gravida et mattis
-                                vulputate, tristique ut lectus</p>
-
-
+                            <p class="product-description mb-20"></p>
                             <div class="cart-buttons mb-20">
                                 <div class="pro-qty mr-10">
                                     <input type="text" value="1">
                                 </div>
                                 <div class="add-to-cart-btn">
-                                    <a href="#" class="pataku-btn"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
+                                    <a class="pataku-btn"><i class="fa fa-shopping-cart"></i>{{trans('Plentymarket::WebIndexProductListCategory.add_to_cart')}}
+                                    </a>
                                 </div>
                             </div>
 
-
                             <div class="social-share-buttons">
-                                <h3>share this product</h3>
+                                <h3>{{trans('Plentymarket::WebIndexProductListCategory.share_this_product')}}</h3>
                                 <ul>
                                     <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
                                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -352,7 +302,69 @@
         var id = $(this).data("id");
         $.get("/api/index/product/" + id, function(response)
         {
+            $.each(response.data.images, function(index, value)
+            {
+                var tpl = $("<div class=\"single-small-image img-full\">\n" +
+                    "                                        <a data-toggle=\"tab\" id=\"single-slide-tab-quick-" + index + "\" href=\"#single-slide-quick-" + index + "\">\n" +
+                    "                                            <img src=\"" + value + "\" class=\"img-fluid\" alt=\"\">\n" +
+                    "                                        </a>\n" +
+                    "                                    </div>");
+                $(".modal .small-image-slider").append(tpl);
+
+                var first = index == 0 ? "show active" : "";
+
+                var tpl = $("<div class=\"tab-pane fade " + first + "\" id=\"single-slide-quick-" + index + "\" role=\"tabpanel\" aria-labelledby=\"single-slide-tab-quick-" + index + "\">\n" +
+                    "                                    <div class=\"single-product-img img-full\">\n" +
+                    "                                        <img src=\"" + value + "\" class=\"img-fluid\" alt=\"\">\n" +
+                    "                                    </div>\n" +
+                    "                                </div>");
+                $(".modal .product-large-image-list").append(tpl);
+            });
+            $(".modal .product-title").html(response.data.name);
+            $(".modal .main-price").html(response.data.format_main_price);
+            $(".modal .discounted-price").html(response.data.format_discount_price);
+            $(".modal .product-description").html(response.data.short_desc);
+
+            $(".modal .add-to-cart-btn").data("id", response.data.variationId);
+            $(".modal .add-to-cart-btn").data("name", response.data.name);
+            $(".modal .add-to-cart-btn").data("image", response.data.images[0]);
+            $(".modal .add-to-cart-btn").data("format_discount_price", response.data.format_discount_price);
+            $(".modal .add-to-cart-btn").data("discount_price", response.data.discount_price);
+
             $("#quick-view-modal-container").modal("show");
+        });
+    });
+
+    $(".modal .add-to-cart-btn").on("click", function()
+    {
+        var quantity = parseInt($(".modal .pro-qty input").text());
+        var variationId = $(this).data("id");
+        var name = $(this).data("name");
+        var image = $(this).data("image");
+        var format_discount_price = $(this).data("format_discount_price");
+        var discount_price = $(this).data("discount_price");
+        addBasket(variationId, quantity, {
+            name: name,
+            image: image,
+            format_discount_price: format_discount_price,
+            discount_price: discount_price,
+            variationId: variationId
+        }, function(success)
+        {
+            if (success)
+            {
+                spop({
+                    template: '{{trans('Plentymarket::WebIndexProduct.add_to_cart_success')}}',
+                    style: "success"
+                });
+            }
+            else
+            {
+                spop({
+                    template: '{{trans('Plentymarket::WebIndexProduct.add_to_cart_failed')}}',
+                    style: "error"
+                });
+            }
         });
     });
 </script>
