--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -22,20 +22,20 @@
                             <p class="result-show-message">Showing {{page}}–{{page * 12}} of {{items.total}} results</p>
                             <!--=======  End of view mode  =======-->
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column flex-sm-row justify-content-start justify-content-md-end align-items-sm-center">
-                            <!--=======  Sort by dropdown  =======-->
-                            <div class="sort-by-dropdown d-flex align-items-center mb-xs-10">
-                                <p class="mr-10 mb-0">Sort By: </p>
-                                <select name="sort-by" id="sort-by" class="nice-select">
-                                    <option value="0">Sort By Popularity</option>
-                                    <option value="0">Sort By Average Rating</option>
-                                    <option value="0">Sort By Newness</option>
-                                    <option value="0">Sort By Price: Low to High</option>
-                                    <option value="0">Sort By Price: High to Low</option>
-                                </select>
-                            </div>
-                            <!--=======  End of Sort by dropdown  =======-->
-                        </div>
+                        {#                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column flex-sm-row justify-content-start justify-content-md-end align-items-sm-center">#}
+                        {#                            <!--=======  Sort by dropdown  =======-->#}
+                        {#                            <div class="sort-by-dropdown d-flex align-items-center mb-xs-10">#}
+                        {#                                <p class="mr-10 mb-0">Sort By: </p>#}
+                        {#                                <select name="sort-by" id="sort-by" class="nice-select">#}
+                        {#                                    <option value="0">Sort By Popularity</option>#}
+                        {#                                    <option value="0">Sort By Average Rating</option>#}
+                        {#                                    <option value="0">Sort By Newness</option>#}
+                        {#                                    <option value="0">Sort By Price: Low to High</option>#}
+                        {#                                    <option value="0">Sort By Price: High to Low</option>#}
+                        {#                                </select>#}
+                        {#                            </div>#}
+                        {#                            <!--=======  En   d of Sort by dropdown  =======-->#}
+                        {#                        </div>#}
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                                         <img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 255px;height: 306px;">
                                     </a>
                                     <!--=======  hover icons  =======-->
-                                    <a class="hover-icon preview" data-id="{{item.id}}" href="#" data-toggle="modal" data-target="#quick-view-modal-container"><i class="lnr lnr-eye"></i></a>
+                                    {#                                    <a class="hover-icon preview" data-id="{{item.id}}" href="#" data-toggle="modal" data-target="#quick-view-modal-container"><i class="lnr lnr-eye"></i></a>#}
                                     <a class="hover-icon add_to_wishlist" data-id="{{item.variationId}}"><i class="lnr lnr-heart"></i></a>
                                     <a class="hover-icon add_to_cart" data-discount_price="{{item.discount_price}}" data-format_discount_price="{{item.format_discount_price}}" data-id="{{item.variationId}}" data-name="{{item.name}}" data-image="{{item.images.0}}"><i class="lnr lnr-cart"></i></a>
                                     <!--=======  End of hover icons  =======-->
@@ -149,7 +149,6 @@
                                 <div class="pagination-content text-center text-md-right">
                                     <ul>
                                         <li><a href="?page={{page-1}}"><i class="fa fa-angle-left"></i> Previous</a></li>
-                                        {%set max = (items.total/12)|ceil%}
                                         {%for i in 1..max%}
                                             <li><a {%if page == i%}class="active"{%endif%} href="?page={{i}}">{{i}}</a>
                                             </li>
@@ -302,8 +301,8 @@
         var id = $(this).data("id");
         $.get("/api/index/product/" + id, function(response)
         {
-            // $(".modal .small-image-slider").empty();
-            $(".modal .quickview-small-image-slider").slickRemove();
+            $(".modal .small-image-slider").empty();
+            // $(".modal .quickview-small-image-slider").slickRemove();
             $(".modal .product-large-image-list").empty();
             $.each(response.data.images, function(index, value)
             {
@@ -312,8 +311,8 @@
                     "                                            <img src=\"" + value + "\" class=\"img-fluid\" alt=\"\">\n" +
                     "                                        </a>\n" +
                     "                                    </div>");
-                // $(".modal .small-image-slider").append(tpl);
-                $(".modal .quickview-small-image-slider").slickAdd(tpl);
+                $(".modal .small-image-slider").append(tpl);
+                // $(".modal .quickview-small-image-slider").slickAdd(tpl);
 
                 var first = index == 0 ? "show active" : "";
 
