--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -149,6 +149,7 @@
                                 <div class="pagination-content text-center text-md-right">
                                     <ul>
                                         <li><a href="?page={{page-1}}"><i class="fa fa-angle-left"></i> Previous</a></li>
+                                        {%set max = (items.total/12)%}
                                         {%for i in 1..max%}
                                             <li><a {%if page == i%}class="active"{%endif%} href="?page={{i}}">{{i}}</a>
                                             </li>
