--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -144,22 +144,7 @@
                                 <p class="show-result-text">Showing {{page}}-{{page*12}} of {{items.total}} item(s)</p>
                                 <!--=======  End of showing result text  =======-->
                             </div>
-                            <div class="col-lg-8 col-md-8 col-sm-12">
-                                <!--=======  pagination-content  =======-->
-                                <div class="pagination-content text-center text-md-right">
-                                    <ul>
-                                        <li><a href="?page={{page-1}}"><i class="fa fa-angle-left"></i> Previous</a>
-                                        </li>
-                                        {%set max = (items.total/12)|ceil%}
-                                        {%for i in 1..max%}
-                                            <li><a {%if page == i%}class="active"{%endif%} href="?page={{i}}">{{i}}</a>
-                                            </li>
-                                        {%endfor%}
-                                        <li><a href="?page={{page+1}}">Next <i class="fa fa-angle-right"></i> </a></li>
-                                    </ul>
-                                </div>
-                                <!--=======  End of pagination-content  =======-->
-                            </div>
+                            {{paginate|raw}}
                         </div>
                     </div>
                     <!--=======  End of pagination  =======-->
