--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -144,7 +144,9 @@
                                 <p class="show-result-text">Showing {{page}}-{{page*12}} of {{items.total}} item(s)</p>
                                 <!--=======  End of showing result text  =======-->
                             </div>
-                            {{paginate|raw}}
+                            <div class="col-lg-8 col-md-8 col-sm-12">
+                                {{paginate|raw}}
+                            </div>
                         </div>
                     </div>
                     <!--=======  End of pagination  =======-->
