--- a/resources/views/index/about.twig
+++ b/resources/views/index/about.twig
@@ -6,29 +6,28 @@
 
 		<div class="row row-30">
 
-			<!-- About Image -->
-			<div class="about-image col-lg-6 mb-80">
-				<img src="assets/images/banners/about-banner.jpg" alt="">
-			</div>
-
-			<!-- About Content -->
-			<div class="about-content col-lg-6">
-				<div class="row">
-					<div class="col-12 mb-50">
-						<h1>WELCOME TO <span>PATAKU.</span></h1>
-						<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born an
-							will give you a complete account of the system, and expound the actual teachings of the eat
-							explorer of the truth, the mer of human.</p>
-					</div>
-
-					<div class="col-12 mb-50">
-						<h4>WIN BEST ONLINE SHOP AT 2018</h4>
-						<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born an
-							will give you a complete account of the system, and expound the actual teachings of the eat
-							explorer of the truth, the mer of human.</p>
-					</div>
-
-				</div>
+			<div class="about-section-title col-12 mb-50">
+				<h3>Our company</h3>
+				<p>
+					Mercury Living was born in 2018. The company is entirely dedicated to the production of outdoor
+					furniture. Leveraging our years of experience, we always work closely with our customers, offering
+					inspiring and energetic ideas in a relaxed environment. We share your passion for life, for the
+					world, and for unique lifestyles.
+					We have been inspired by the splendid ideas of people from all over the world - in particular
+					artists and designers – whom we met through our original business Mercury Service, which guides
+					design professionals in international collaborations in the area of Art & Design. The personal
+					relationships we built with these artists lead us to found Mercury Living to introduce new designs
+					to the world.
+					The name Mercury comes from Greek mythology: it is the name of the messenger of the gods and also
+					represents the protector of travel, travelers and communication. We are all travelers in this world
+					and we can enrich each other through encounters, knowledge and, above all, the diffusion and
+					exchange of ideas.
+					With the inspiration and support of professionals we have known for years, Mercury Living
+					collaborates with emerging designers, introducing our dynamic and innovative vision into products.
+					All our collections are works of art and have a high degree of quality and comfort.
+					Mercury Living also offers an excellent and punctual home delivery service with simple assembly.
+					Choose Mercury Living and we will accompany you with passion for a unique life!
+				</p>
 			</div>
 
 		</div>
@@ -38,45 +37,19 @@
 			<!-- Banner -->
 			<div class="col-md-4 mb-sm-30">
 				<div class="banner">
-					<a href="#"><img src="assets/images/banners/home3-banner1.jpg" alt="Banner"></a>
+					<a href="#"><img src="{{plugin_path("Plentymarket")}}/images/banners/home3-banner1.jpg" alt="Banner"></a>
 				</div>
 			</div>
 			<div class="col-md-4 col-12 mb-sm-30">
 				<div class="banner">
-					<a href="#"><img src="assets/images/banners/home3-banner2.jpg" alt="Banner"></a>
+					<a href="#"><img src="{{plugin_path("Plentymarket")}}/images/banners/home3-banner2.jpg" alt="Banner"></a>
 				</div>
 			</div>
 			<div class="col-md-4 col-12 mb-sm-30">
 				<div class="banner">
-					<a href="#"><img src="assets/images/banners/home3-banner3.jpg" alt="Banner"></a>
+					<a href="#"><img src="{{plugin_path("Plentymarket")}}/images/banners/home3-banner3.jpg" alt="Banner"></a>
 				</div>
 
-			</div>
-
-		</div>
-
-		<!-- Mission, Vission & Goal -->
-		<div class="about-mission-vission-goal row row-20 mb-80">
-
-			<div class="col-lg-4 col-md-6 col-12 mb-sm-30">
-				<h3>OUR VISSION</h3>
-				<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born an will give
-					you a ete account of the system, and expound the actual teangs the eat explorer of the truth, the
-					mer of human tas assumenda est, omnis dolor repellend</p>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 mb-sm-30">
-				<h3>OUR MISSION</h3>
-				<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born an will give
-					you a ete account of the system, and expound the actual teangs the eat explorer of the truth, the
-					mer of human tas assumenda est, omnis dolor repellend</p>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 mb-sm-30">
-				<h3>OUR GOAL</h3>
-				<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born an will give
-					you a ete account of the system, and expound the actual teangs the eat explorer of the truth, the
-					mer of human tas assumenda est, omnis dolor repellend</p>
 			</div>
 
 		</div>
@@ -85,9 +58,12 @@
 
 			<!-- About Section Title -->
 			<div class="about-section-title col-12 mb-50">
-				<h3>YOU CAN CHOOSE US BECAUSE <br>WE ALWAYS PROVIDE IMPORTANCE...</h3>
-				<p>PATAKU provide how all this mistaken idea of denouncing pleasure and sing pain was born will give you
-					a complete account of the system, and expound the actual</p>
+				<h3>Career</h3>
+				<p>
+					Work With Us
+					We are always on the look out for talented people to join our team. Please see our current vacancies
+					below:
+				</p>
 			</div>
 
 			<!-- About Feature -->
@@ -95,38 +71,83 @@
 				<div class="row">
 
 					<div class="col-md-6 col-12 mb-30">
-						<h4>FAST DELIVERY</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
+						<h4>
+							<a href="https://www.workable.com/j/878724EAB0">
+								E-commerce Admin Assistant
+							</a>
+						</h4>
+						<p>
+							Country:Italy
+							Location: Milan
+						</p>
+					</div>
+					<div class="col-md-6 col-12 mb-30">
+						<h4>
+							<a href="https://www.workable.com/j/32BEB2234A">
+								Legal Counsel (IP/Commercial)
+							</a>
+						</h4>
+						<p>
+							Country:Italy
+							Location: Milan
+						</p>
+					</div>
+					<div class="col-md-6 col-12 mb-30">
+						<h4>
+							<a href="https://www.workable.com/j/2F8F3F22AA">
+								Motion Graphic Designer
+							</a>
+						</h4>
+						<p>
+							Country:Italy
+							Location: Milan
+						</p>
+					</div>
+					<div class="col-md-6 col-12 mb-30">
+						<h4>
+							<a href="https://www.workable.com/j/FAF0423256">
+								Project Manager – E-commerce Marketing
+							</a>
+						</h4>
+						<p>
+							Country:Italy
+							Location: Milan
+						</p>
+					</div>
+					<div class="col-md-6 col-12 mb-30">
+						<h4>
+							<a href="https://www.workable.com/j/A6E4F085BD">
+								Senior Customer Service Agent
+							</a>
+						</h4>
+						<p>
+							Country:Italy
+							Location: Milan
+						</p>
 					</div>
 
 					<div class="col-md-6 col-12 mb-30">
-						<h4>QUALITY PRODUCT</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
+						<h4>
+							<a href="https://www.workable.com/j/149FFF3DF9">
+								Chargé de Clientèle H/F
+							</a>
+						</h4>
+						<p>
+							Country:France
+							Location: Paris, Paris
+						</p>
 					</div>
 
 					<div class="col-md-6 col-12 mb-30">
-						<h4>SECURE PAYMENT</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
-					</div>
-
-					<div class="col-md-6 col-12 mb-30">
-						<h4>MONEY BACK GUARNTEE</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
-					</div>
-
-					<div class="col-md-6 col-12 mb-30">
-						<h4>EASY ORDER TRACKING</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
-					</div>
-
-					<div class="col-md-6 col-12 mb-30">
-						<h4>FREE RETURN</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
-					</div>
-
-					<div class="col-md-6 col-12 mb-30 mb-sm-0">
-						<h4>24/7 SUPPORT</h4>
-						<p>PATAKU provide how all this mistaken dea of denouncing pleasure and sing </p>
+						<h4>
+							<a href="https://www.workable.com/j/1C7749F829">
+								Kundenservice - Customer Service Agent
+							</a>
+						</h4>
+						<p>
+							Country:Germany
+							Location: Berlin, Berlin
+						</p>
 					</div>
 
 				</div>
@@ -134,7 +155,10 @@
 
 			<!-- About Feature Banner -->
 			<div class="about-feature-banner col-md-5 col-12">
-				<div class="banner"><a href="#"><img src="assets/images/banners/home3-banner8.jpg" alt="Banner"></a>
+				<div class="banner">
+					<a href="#">
+						<img src="{{plugin_path("Plentymarket")}}/images/banners/home3-banner8.jpg" alt="Banner">
+					</a>
 				</div>
 			</div>
 
