--- a/resources/views/index/about.twig
+++ b/resources/views/index/about.twig
@@ -8,7 +8,7 @@
 
 			<div class="about-section-title col-12 mb-50">
 				<h3>Our company</h3>
-				<p>
+				<p style="max-width: none;">
 					Mercury Living was born in 2018. The company is entirely dedicated to the production of outdoor
 					furniture. Leveraging our years of experience, we always work closely with our customers, offering
 					inspiring and energetic ideas in a relaxed environment. We share your passion for life, for the
