--- a/resources/views/index/about.twig
+++ b/resources/views/index/about.twig
@@ -8,26 +8,34 @@
 
 			<div class="about-section-title col-12 mb-50">
 				<h3>Our company</h3>
-				<p style="max-width: none;">
-					Mercury Living was born in 2018. The company is entirely dedicated to the production of outdoor
-					furniture. Leveraging our years of experience, we always work closely with our customers, offering
-					inspiring and energetic ideas in a relaxed environment. We share your passion for life, for the
-					world, and for unique lifestyles.
-					We have been inspired by the splendid ideas of people from all over the world - in particular
-					artists and designers – whom we met through our original business Mercury Service, which guides
-					design professionals in international collaborations in the area of Art & Design. The personal
-					relationships we built with these artists lead us to found Mercury Living to introduce new designs
-					to the world.
-					The name Mercury comes from Greek mythology: it is the name of the messenger of the gods and also
-					represents the protector of travel, travelers and communication. We are all travelers in this world
-					and we can enrich each other through encounters, knowledge and, above all, the diffusion and
-					exchange of ideas.
-					With the inspiration and support of professionals we have known for years, Mercury Living
-					collaborates with emerging designers, introducing our dynamic and innovative vision into products.
-					All our collections are works of art and have a high degree of quality and comfort.
-					Mercury Living also offers an excellent and punctual home delivery service with simple assembly.
-					Choose Mercury Living and we will accompany you with passion for a unique life!
-				</p>
+				<span style="max-width: none;">
+					<p>
+						Mercury Living was born in 2018. The company is entirely dedicated to the production of outdoor
+						furniture. Leveraging our years of experience, we always work closely with our customers, offering
+						inspiring and energetic ideas in a relaxed environment. We share your passion for life, for the
+						world, and for unique lifestyles.
+					</p>
+					<p>
+						We have been inspired by the splendid ideas of people from all over the world - in particular
+						artists and designers – whom we met through our original business Mercury Service, which guides
+						design professionals in international collaborations in the area of Art & Design. The personal
+						relationships we built with these artists lead us to found Mercury Living to introduce new designs
+						to the world.
+					</p>
+					<p>
+						The name Mercury comes from Greek mythology: it is the name of the messenger of the gods and also
+						represents the protector of travel, travelers and communication. We are all travelers in this world
+						and we can enrich each other through encounters, knowledge and, above all, the diffusion and
+						exchange of ideas.
+					</p>
+					<p>
+						With the inspiration and support of professionals we have known for years, Mercury Living
+						collaborates with emerging designers, introducing our dynamic and innovative vision into products.
+						All our collections are works of art and have a high degree of quality and comfort.
+						Mercury Living also offers an excellent and punctual home delivery service with simple assembly.
+						Choose Mercury Living and we will accompany you with passion for a unique life!
+					</p>
+				</span>
 			</div>
 
 		</div>
