--- a/resources/views/index/about.twig
+++ b/resources/views/index/about.twig
@@ -1,6 +1,12 @@
 ﻿{%include 'Plentymarket::common.header'%}
 {%include 'Plentymarket::common.breadcrumb'%}
 <!-- About Section Start -->
+<style>
+	.about-section-title p
+	{
+		max-width: none;
+	}
+</style>
 <div class="about-section mb-80">
 	<div class="container">
 
