--- a/resources/views/index/about.twig
+++ b/resources/views/index/about.twig
@@ -86,7 +86,7 @@
 
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/878724EAB0">
+							<a href="">
 								E-commerce Admin Assistant
 							</a>
 						</h4>
@@ -97,7 +97,7 @@
 					</div>
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/32BEB2234A">
+							<a href="">
 								Legal Counsel (IP/Commercial)
 							</a>
 						</h4>
@@ -108,7 +108,7 @@
 					</div>
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/2F8F3F22AA">
+							<a href="">
 								Motion Graphic Designer
 							</a>
 						</h4>
@@ -119,7 +119,7 @@
 					</div>
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/FAF0423256">
+							<a href="">
 								Project Manager – E-commerce Marketing
 							</a>
 						</h4>
@@ -130,7 +130,7 @@
 					</div>
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/A6E4F085BD">
+							<a href="">
 								Senior Customer Service Agent
 							</a>
 						</h4>
@@ -142,7 +142,7 @@
 
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/149FFF3DF9">
+							<a href="">
 								Chargé de Clientèle H/F
 							</a>
 						</h4>
@@ -154,7 +154,7 @@
 
 					<div class="col-md-6 col-12 mb-30">
 						<h4>
-							<a href="https://www.workable.com/j/1C7749F829">
+							<a href="">
 								Kundenservice - Customer Service Agent
 							</a>
 						</h4>
