--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -32,7 +32,7 @@
 						<h3 class="footer-title mb-20">{{footer_article_1.details.0.name}}</h3>
 						<ul>
 							{%for article in footer_article_1_list%}
-								<li><a href="#">{{article.data.post.title}}</a></li>
+								<li><a href="/index/blog/{{article.id}}">{{article.data.post.title}}</a></li>
 							{%endfor%}
 						</ul>
 					</div>
