--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Pataku - Furniture eCommerce Bootstrap4 Template</title>
+	<title>Mercury</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -83,7 +83,7 @@
 						<div class="single-dropdown">
 							<a href="#" id="changeCurrency">
 								<span id="currencyName">
-									EURO €<i class="fa fa-angle-down"></i>
+									EUR €<i class="fa fa-angle-down"></i>
 								</span>
 							</a>
 							<div class="language-currency-list hidden" id="currencyList">
@@ -91,7 +91,7 @@
 									<!--
 									<li><a href="#">USD $</a></li>
 									-->
-									<li><a href="#">EURO €</a></li>
+									<li><a href="#">EUR €</a></li>
 								</ul>
 							</div>
 						</div>
@@ -110,26 +110,24 @@
 								<ul>
 									<li><a href="#"><img src="{{plugin_path("Plentymarket")}}/images/flags/1.jpg"
 									                     alt=""> English</a></li>
-									<li><a href="#"><img src="{{plugin_path("Plentymarket")}}/images/flags/2.jpg"
-									                     alt=""> Français</a></li>
+									<li>
+										<a href="#">
+											<img src="{{plugin_path("Plentymarket")}}/images/flags/3.png" alt="">
+											Italy
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
-
 						<!--=======  End of single dropdown  =======-->
-
 					</div>
-
 					<!--=======  End of header top dropdowns  =======-->
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<!--=======  End of header top  =======-->
-
 	<!--=======  Menu Top  =======-->
-
 	<div class="menu-top pt-35 pb-35 pt-sm-20 pb-sm-20">
 		<div class="container">
 			<div class="row align-items-center">
